--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\": "src/",
+            "Database\\Factories\\": "src/Infrastructure/Laravel/database/factories/",
+            "Database\\Seeders\\": "src/Infrastructure/Laravel/database/seeders/"
         }
     },
     "autoload-dev": {
